--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -190,8 +190,8 @@
         "colab": {}
       },
       "source": [
-        "price = pd.DataFrame(data['Price'])\n",
-        "area = pd.DataFrame(data['SqFt'])"
+        "price = pd.DataFrame(data['Price']) #price = data[['Price']]\n",
+        "area = pd.DataFrame(data['SqFt']) # area =data[['SqFt']] "
       ],
       "execution_count": 0,
       "outputs": []
